Chequeo de tipo de columna en cantidad de prod.